--- a/src/index.css
+++ b/src/index.css
@@ -100,7 +100,7 @@
   overflow: hidden;
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 3;
+  line-clamp: 3;
 }
 
 /* Smooth transitions */
